--- a/github_pages_hakkinda_yazi.html
+++ b/github_pages_hakkinda_yazi.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Talha'nın Blog Sayfası</title>
+    <title>Burak'ın Blog Sayfası</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1>Talha'nın Blog Sayfası</h1>
+        <h1>Burak'ın Blog Sayfası</h1>
         <nav>
             <ul>
                 <li><a href="#latest-posts">Son Yazılar</a></li>
