--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Talha'nın Blog Sayfası</title>
+  <title>Burak'ın Blog Sayfası</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header>
-    <h1>Talha'nın Blog Sayfası</h1>
+    <h1>Burak'ın Blog Sayfası</h1>
     <nav>
       <ul>
         <li><a href="#latest-posts">Son Yazılar</a></li>
@@ -33,11 +33,11 @@
     </section>
     <section id="about-me">
       <h2>Hakkımda</h2>
-      <p>Ben Talha</p>
+      <p>Ben Burak</p>
     </section>
     <section id="contact">
       <h2>İletişim</h2>
-      <p>E-posta adresiniz: fatihtalha06@gmail.com</p>
+      <p>E-posta adresiniz: brakcetin660@gmail.com</p>
       <p>Sosyal medya hesaplarınız:</p>
       <ul>
         <li><a href="#">Twitter</a></li>
